# analogous_qq_for_windows

./: README.md
Qt_qq/: AddFriend.cpp  AddFriend.h  AddFriend.ui  CMakeLists.txt  CMakeLists.txt.user.704662b  ChatLeftWidget.cpp  ChatLeftWidget.h  ChatLeftWidget.ui  ChatMainWindow.cpp  ChatMainWindow.h  ChatMainWindow.ui  ChatRightWidget.cpp  ChatRightWidget.h  ChatRightWidget.ui  EmojiDelegate.cpp  EmojiDelegate.h  EmojiModel.cpp  EmojiModel.h  Http.cpp  Http.h  ListItemDelegate.cpp  ListItemDelegate.h  ListItemDelegateLeft.cpp  ListItemDelegateLeft.h  ListItemModel.cpp  ListItemModel.h  MyAudio.cpp  MyAudio.h  MyTextToSpeech.cpp  MyTextToSpeech.h  People.cpp  People.h  Register.cpp  Register.h  Register.ui  Speech.cpp  Speech.h  ToUTF_8.cpp  ToUTF_8.h  codeTranslate.h  (+11 more)
Qt_qq_server/: MainWidget.cpp  MainWidget.h  MainWidget.ui  Qt_qq_server.pro  main.cpp
